<resources>
    <string name="app_name">mCamp</string>
    <string name="google_maps_key">AIzaSyAvvvTgLZrc_vHCIMytmo0jakwndl6bGSo</string>
    <string name="discription">Memory Camp</string>
    <string name="child_art">child_art</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notificationbg">NotificationBG</string>
    <string name="notification">Notification</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="name">name</string>
    <string name="no_results_yet">No Results Yet</string>
    <string name="home">Home</string>
    <string name="searchIcon">SearchIcon</string>
    <string name="settingIcon">SettingIcon</string>
    <string name="all_your_travel_plans_in_none_application">All Your Travel Plans In \nOne Application</string>
    <string name="travelPlaces">Travel Places</string>
    <string name="accommodationHotels">Accommodation Hotels</string>
    <string name="handyCraftsSuvinoirs">Handy Crafts Suvinoirs</string>
    <string name="transportation">Transportation</string>
    <string name="signIn">Sign In</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="enterYourPassword">Enter your password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgetPassword">Forget password</string>
    <string name="signUp">Sign Up</string>
    <string name="enterYourName">Enter your name</string>
    <string name="enterYourConfirmPassword">Enter Your Confirm Password</string>
    <string name="welcomeDescription">Welcome to get a new \nexperience of travelling</string>
    <string name="memoryCamp">Memory \nCamp</string>
    <string name="skipForNow">Skip for now</string>
    <string name="imageGoogle">image Google</string>
    <string name="google">continue with google</string>
    <string name="imageArrow">image Arrow</string>
    <string name="imageFacebook">image Facebook</string>
    <string name="facebook">continue with facebook</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="type_here">Type here</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="faq">FAQ</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="reviews">Reviews</string>
    <string name="addAccount">ADD_Account</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="default_web_client_id" translatable="false">460722593632-7938blg4npqe49qg7k4bl1stj1t05ucu.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="create_a_new_password">Create a New Password</string>
    <string name="password_note">Your new password must be different from previous used password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_note">Enter the email associated with your account and we will send an email with instructions to reset your password.</string>
    <string name="send_otp">Send OTP</string>
    <string name="mark">\?Mark</string>
    <string name="add_new_location">Add new Location</string>
    <string name="location_image">LocationImage</string>
    <string name="enter_location_name">Enter Location Name</string>
    <string name="paste_location_link">Paste Location Link</string>
    <string name="location_details">Location Details</string>
    <string name="category">Category</string>
    <string name="key_words">Key Words</string>
    <string name="add">ADD</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="guest">Guest</string>
    <string name="select_location">Select Location</string>
    <string name="submit">Submit</string>
    <string name="ky_word_hint">Use \"space with a comma\" (, ) for separate keywords.\nEx: Sri Lanka, Colombo</string>
    <string name="_name">Name</string>
    <string name="edit_button">Edit button</string>
    <string name="email">Email</string>
    <string name="my_contribution">My Contribution</string>
    <string name="my_reviews">My Reviews</string>
    <string name="change_name">Change Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="update">Update</string>
    <string name="clear">CLEAR</string>
    <string name="cross">Cross</string>
    <string name="human_art">Human Art</string>
    <string name="feedback_background">Feedback background</string>
    <string name="give_us_your_feedback">Give Us Your Feedback!</string>
    <string name="travel_places">Travel Places</string>
    <string name="image">Image</string>
    <string name="search">Search</string>
    <string name="if_you_know_name_enter_here">If you know name enter here</string>
    <string name="how_much_km_can_you_go_from_pinpoint">How much km can you go from pinpoint?</string>
    <string name="search_around_here">Search around here</string>
    <string name="reset">Reset</string>
    <string name="map_icon">Map Icon</string>
    <string name="red_3d_pin">red 3d pin</string>
    <string name="car">car</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="based_on_17_reviews">based on 0 reviews</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="average">Average</string>
    <string name="below_average">Below Average</string>
    <string name="poor">Poor</string>
    <string name="see_more">See more...</string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="title_activity_give_rate">ActivityGiveRate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="submit_review">Submit Review</string>
    <string name="your_review">Your Review</string>
    <string name="comments">Comments</string>
    <string name="no_comment_yet">No comment yet.</string>
    <string name="add_a_new_comment">Add a new comment</string>
    <string name="hand">hand</string>
    <string name="_0_liked">0 liked</string>
    <string name="hart">hart</string>
    <string name="_0_comment">0 Comment</string>
    <string name="create_new_comment">Create new comment</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="_0_reply">0 reply</string>
    <string name="no_reply_yet">No reply yet</string>
    <string name="coin">Coin</string>
    <string name="_0">0</string>
    <string name="over_view">Over View</string>
    <string name="location_name">Location Name</string>
    <string name="_2020_01_01">2020.01.01</string>
    <string name="_12_12">12.12</string>
    <string name="show_in_map">Show in map</string>
    <string name="open_google_map_app">Open Google Map App</string>
    <string name="give_us_your">Give Us Your</string>
    <string name="feedbacks">Feedback !</string>
    <string name="type_your_feedback_in_here">Type your feedback in here</string>
    <string name="question">Question</string>
    <string name="reply">Reply</string>
    <string name="ask_question">Ask question</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="no_contribution_yet_n_add_new_location_for_contribution">No contribution yet.\n Add new location for Contribution.</string>
    <string name="no_reviews_yet">No Reviews yet.</string>
    <string name="double_tap_an_image_to_maximize">Double-tap an image to maximize.</string>
    <string name="approve">Approve</string>
    <string name="points">Points</string>
    <string name="enter_number_of_points">Enter number of points</string>


</resources>