<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/background_welcome"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:civ_border_width="1dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/baseline_question_mark_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/guest"
        android:textColor="#DBD3AA"
        android:textSize="14sp" />


</LinearLayout>