<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentComments">

    <TextView
        android:id="@+id/comment_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/comments"
        android:textColor="#A1887F"
        android:textSize="30sp"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/users_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_comment_yet"
                android:textAlignment="center"
                android:layout_marginTop="100dp"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/addComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_style_home_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:text="@string/add_a_new_comment"/>
        
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/writing_hand"
            android:contentDescription="@string/hand" />
    </LinearLayout>

    <TextView
        android:id="@+id/see_more"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/see_more"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:visibility="gone"
        tools:ignore="RtlCompat,TextSizeCheck,UsingOnClickInXml" />

</FrameLayout>