<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/one_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/comment_user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:civ_border_width="1dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/user_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/past_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#97000000"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/user_comment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:id="@+id/like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,TouchTargetSizeCheck,DuplicateSpeakableTextCheck">

                    <ImageView
                        android:id="@+id/hart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/hart"
                        android:src="@drawable/hart"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/_0_liked"
                        android:textColor="@color/black"
                        tools:ignore="TextSizeCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/hart"
                        android:src="@drawable/comment" />

                    <TextView
                        android:id="@+id/comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/_0_reply"
                        android:textColor="@color/black"
                        tools:ignore="TextSizeCheck" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
</LinearLayout>