<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/sign_in_screen"
    tools:context=".ActivitySignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:textColor="#263238"
            android:textSize="48sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            android:background="@drawable/round_style_input_filed"
            app:boxStrokeColor="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inEmail"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:ems="15"
                android:hint="@string/enterYourEmail"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                app:boxStrokeColor="#00000000"
                tools:ignore="Deprecated,TextContrastCheck,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            android:background="@drawable/round_style_input_filed"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                app:boxStrokeColor="#00000000"
                android:ems="15"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/enterYourPassword"
                android:inputType="textPassword"
                android:password="true"
                tools:ignore="Deprecated,TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberMe"
                android:textAlignment="center"
                android:textColor="#131313"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:textColor="#0000FF"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="15"
                android:backgroundTint="#000000"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:onClick="signIn"
                android:textSize="24sp"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize,DuplicateSpeakableTextCheck"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:background="@drawable/round_style_authenticator"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="signInWithGoogle"
            android:orientation="horizontal"
            tools:ignore="UsingOnClickInXml,VisualLintBounds">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/imageGoogle"
                android:src="@drawable/image_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/imageArrow"
                android:src="@drawable/image_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="signInWithFacebook"
            android:background="@drawable/round_style_authenticator"
            android:focusable="true"
            android:visibility="invisible"
            tools:ignore="UsingOnClickInXml">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/image_facebook"
                android:contentDescription="@string/imageFacebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:text="@string/facebook"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/image_right_arrow"
                android:contentDescription="@string/imageArrow" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>